// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text > default 1`] = `
<div
  class="css-8myfei"
  dir="auto"
/>
`;

exports[`Text > nested 1`] = `
<div
  class="css-8myfei"
  dir="auto"
>
  <span
    class="css-1ii5pxg"
    data-testid="child"
  />
</div>
`;

exports[`Text > prop "aria-label" > value is set 1`] = `
<div
  aria-label="accessibility label"
  class="css-8myfei"
  dir="auto"
/>
`;

exports[`Text > prop "aria-labelledby" > value is set 1`] = `
<div
  aria-labelledby="123"
  class="css-8myfei"
  dir="auto"
/>
`;

exports[`Text > prop "aria-live" > value is set 1`] = `
<div
  aria-live="polite"
  class="css-8myfei"
  dir="auto"
/>
`;

exports[`Text > prop "dir" > value is "ltr" 1`] = `
<div
  class="css-8myfei"
  dir="ltr"
/>
`;

exports[`Text > prop "dir" > value is "rtl" 1`] = `
<div
  class="css-8myfei"
  dir="rtl"
/>
`;

exports[`Text > prop "href" > href with role 1`] = `
<a
  class="css-8myfei"
  dir="auto"
  href="https://example.com"
  role="presentation"
/>
`;

exports[`Text > prop "href" > value is set 1`] = `
<a
  class="css-8myfei"
  dir="auto"
  href="https://example.com"
/>
`;

exports[`Text > prop "hrefAttrs" > null values are excluded 1`] = `
<a
  class="css-8myfei"
  dir="auto"
  href="https://example.com"
/>
`;

exports[`Text > prop "hrefAttrs" > requires "href" 1`] = `
<div
  class="css-8myfei"
  dir="auto"
/>
`;

exports[`Text > prop "hrefAttrs" > target variant is set 1`] = `
<a
  class="css-8myfei"
  dir="auto"
  href="https://example.com"
  target="_blank"
/>
`;

exports[`Text > prop "hrefAttrs" > value is set 1`] = `
<a
  class="css-8myfei"
  dir="auto"
  download="filename.jpg"
  href="https://example.com"
  rel="nofollow"
  target="_blank"
/>
`;

exports[`Text > prop "id" > value is set 1`] = `
<div
  class="css-8myfei"
  dir="auto"
  id="ID"
/>
`;

exports[`Text > prop "lang" > ar 1`] = `
<div
  class="css-8myfei"
  dir="rtl"
  lang="ar"
/>
`;

exports[`Text > prop "lang" > fr 1`] = `
<div
  class="css-8myfei"
  dir="ltr"
  lang="fr"
/>
`;

exports[`Text > prop "lang" > undefined 1`] = `
<div
  class="css-8myfei"
  dir="auto"
/>
`;

exports[`Text > prop "lang" > with dir 1`] = `
<div
  class="css-8myfei"
  dir="ltr"
  lang="ar"
/>
`;

exports[`Text > prop "numberOfLines" > value is set 1`] = `
<div
  class="css-18ravd1"
  dir="auto"
  style="--number-of-lines: 3;"
/>
`;

exports[`Text > prop "numberOfLines" > value is set to one 1`] = `
<div
  class="css-1xgxtno"
  dir="auto"
  style="--number-of-lines: 1;"
/>
`;

exports[`Text > prop "role" > value alters HTML element 1`] = `
<article
  class="css-8myfei"
  dir="auto"
/>
`;

exports[`Text > prop "role" > value is "button" 1`] = `
<button
  class="css-8myfei"
  dir="auto"
  type="button"
/>
`;

exports[`Text > prop "role" > value is set 1`] = `
<div
  class="css-8myfei"
  dir="auto"
  role="presentation"
/>
`;

exports[`Text > prop "style" > value is set 1`] = `
<div
  class="css-8myfei"
  dir="auto"
  style="border-width: 5px;"
/>
`;

exports[`Text > prop "testID" > value is set 1`] = `
<div
  class="css-8myfei"
  data-testid="123"
  dir="auto"
/>
`;
